<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_aibot</name>
  <version>0.0.0</version>
  <description>The ros_msft_aibot package</description>
  <maintainer email="riotsquad@microsoft.com">Azure Edge Robotics</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
